--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="QurioSoft | Your technology partner">
     <meta property="og:description" content="Empowering Partners, Building Futures - QurioSoft is a technology solution builder company that partners with businesses to create innovative solutions tailored to their specific needs.">
-    <meta property="og:image" content="assets/quriosoft-snapshot.png">
+    <meta property="og:image" content="https://quriosoft.com/assets/quriosoft-snapshot.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -2049,8 +2049,8 @@
                     text-transform: none;
                     letter-spacing: 0em;
                   ">
-                                <a href="tel:+14257897141" style="color: #ffffff; /* #1a2529; */ font-weight: 700">
-                                    <span>+1</span> (425) <span>789</span>-<span>7141</span>
+                                <a href="tel:+14257807141" style="color: #ffffff; /* #1a2529; */ font-weight: 700">
+                                    <span>+1</span> (425) <span>780</span>-<span>7141</span>
                                 </a>
                             </p>
                         </div>
