--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB" style="--inner1Vh: 8.13px; --sbw: 0px">
+<html lang="en" style="--inner1Vh: 8.13px; --sbw: 0px">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,7 +7,8 @@
     <!-- HTML Meta Tags -->
     <title>QurioSoft | Your technology partner</title>
     <meta name="description" content="Empowering Partners, Building Futures - QurioSoft is a technology solution builder company that partners with businesses to create innovative solutions tailored to their specific needs.">
-    <meta name="keywords" content="technology solutions, custom software development, digital transformation, cloud computing, AI/ML, cybersecurity, IoT, blockchain, AR/VR, RPA, 5G, edge computing, sustainable technologies">
+    <meta name="keywords" content="technology solutions, custom software development, digital transformation, cloud computing, AI/ML, cybersecurity, IoT, blockchain, AR/VR, RPA, edge computing">
+    <link rel="alternate" hreflang="x-default" href="https://www.quriosoft.com/" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://quriosoft.com">
@@ -23,6 +24,7 @@
     <meta name="twitter:title" content="QurioSoft | Your technology partner">
     <meta name="twitter:description" content="Empowering Partners, Building Futures - QurioSoft is a technology solution builder company that partners with businesses to create innovative solutions tailored to their specific needs.">
     <meta name="twitter:image" content="assets/quriosoft-snapshot.png">
+
     <!-- favicons -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
