fix minor accessibility issues

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- HTML Meta Tags -->
     <title>QurioSoft | Your technology partner</title>
-    <meta name="description" content="Empowering Partners, Building Futures - QurioSoft is a technology solution builder company that partners with businesses to create innovative solutions tailored to their specific needs.">
+    <meta name="description" content="Empowering Partners, Building Futures - QurioSoft is a technology solution builder company that partners with businesses to create innovative solutions.">
     <meta name="keywords" content="technology solutions, custom software development, digital transformation, cloud computing, AI/ML, cybersecurity, IoT, blockchain, AR/VR, RPA, edge computing">
     <link rel="alternate" hreflang="x-default" href="https://www.quriosoft.com/" />
 
@@ -181,24 +181,25 @@
                           width: 100%;
                           height: 100%;
                         ">
-                                            <p id="gMtrHF0P6YWcFJsp" style="
+                                            <h1 id="gMtrHF0P6YWcFJsp" style="
                             color: #ffffff;
                             font-family: Nunito;
                             line-height: 0.99107099em;
+                            margin:0;
                             margin-left: -0.2rem;
                           ">
-                                                <span id="jdZIg6fBYJLA3a4x" style="color: #ffffff">Empower</span>
-                                            </p>
-                                            <p id="AMsqpVJncHQpGFIQ" style="
+                                                <!-- <span id="jdZIg6fBYJLA3a4x" style="color: #ffffff"></span> -->
+                                                Empower excellence with us.
+                                                </h1>
+                                            <!-- <p id="AMsqpVJncHQpGFIQ" style="
                             color: #ffffff;
                             font-family: Nunito;
                             line-height: 0.99107099em;
                             text-transform: none;
                             letter-spacing: 0em;
                           ">
-                                                <span id="n2dH3qAF7FeedG9o" style="color: #ffffff">excellence with
-                                                    us.</span>
-                                            </p>
+                                                <span id="n2dH3qAF7FeedG9o" style="color: #ffffff"></span>
+                                            </p> -->
                                         </div>
                                     </div>
                                 </div>
@@ -342,14 +343,14 @@
                         opacity: 1;
                         animation: auto ease 0s 1 normal none running none;
                       ">
-                                        <img src="./assets/p.svg" loading="lazy" style="
+                                        <img src="./assets/meeting.svg" loading="lazy" style="
                           width: 100%;
                           height: 100%;
                           display: block;
                           object-fit: cover;
                           object-position: 50% 50%;
                           transform: translate(-50%, -50%) rotate(0deg);
-                        " />
+                        " alt="4 team members in a meeting discussing various topics." />
                                     </div>
                                 </div>
                             </div>
@@ -487,14 +488,14 @@
                         opacity: 1;
                         animation: auto ease 0s 1 normal none running none;
                       ">
-                                        <img src="./assets/b510c55952a7cf7d8921ba179998c0bc.gif" loading="lazy" style="
+                                        <img src="./assets/handshake.gif" loading="lazy" style="
                           width: 100%;
                           height: 100%;
                           display: block;
                           object-fit: cover;
                           object-position: 50% 50%;
                           transform: translate(-50%, -50%) rotate(0deg);
-                        " />
+                        " alt="handshake showcasing partnership as a core value" />
                                     </div>
                                 </div>
                             </div>
@@ -599,14 +600,14 @@
                         opacity: 1;
                         animation: auto ease 0s 1 normal none running none;
                       ">
-                                        <img src="./assets/8dd38c3850.gif" loading="lazy" style="
+                                        <img src="./assets/idea-bulb.gif" loading="lazy" style="
                           width: 100%;
                           height: 100%;
                           display: block;
                           object-fit: cover;
                           object-position: 50% 50%;
                           transform: translate(-50%, -50%) rotate(0deg);
-                        " />
+                        " alt="an animated light bulb showcasing innovation as a core value" />
                                     </div>
                                     <svg id="I5Dyh1JQxYwSHVdD" viewBox="0 0 127.07741851557421 137.38099298980995"
                                         preserveAspectRatio="none" style="
@@ -744,14 +745,14 @@
                         opacity: 1;
                         animation: auto ease 0s 1 normal none running none;
                       ">
-                                        <img src="./assets/21ad27309b.gif" loading="lazy" style="
+                                        <img src="./assets/trends.gif" loading="lazy" style="
                           width: 100%;
                           height: 100%;
                           display: block;
                           object-fit: cover;
                           object-position: 50% 50%;
                           transform: translate(-50%, -50%) rotate(0deg);
-                        " />
+                        " alt="animates trends graph showcasing impact as a core value" />
                                     </div>
                                 </div>
                             </div>
@@ -982,7 +983,7 @@
                               object-fit: cover;
                               object-position: 50% 50%;
                               transform: translate(-50%, -50%) rotate(0deg);
-                            " />
+                            " alt="" />
                                             </div>
                                         </div>
                                     </div>
@@ -1292,7 +1293,7 @@
                               object-fit: cover;
                               object-position: 50% 50%;
                               transform: translate(-50%, -50%) rotate(0deg);
-                            " />
+                            " alt="" />
                                             </div>
                                         </div>
                                     </div>
@@ -1581,14 +1582,14 @@
                             opacity: 1;
                             animation: auto ease 0s 1 normal none running none;
                           ">
-                                                <img src="./assets/p(1).svg" loading="lazy" style="
+                                                <img src="./assets/checklist.svg" loading="lazy" style="
                               width: 100%;
                               height: 100%;
                               display: block;
                               object-fit: cover;
                               object-position: 50% 50%;
                               transform: translate(-50%, -50%) rotate(0deg);
-                            " />
+                            " alt="Team member going through a checklist." />
                                             </div>
                                         </div>
                                     </div>
@@ -1679,7 +1680,7 @@
                                                     style="clip-path:path(&#39;M500,250.0019989 C500,388.06700134 388.06900024,499.9980011 250,499.9980011 C111.92900085,499.9980011 0,388.06700134 0,250.0019989 C0,111.93000031 111.92900085,0 250,0 C388.07099915,0 500,111.93000031 500,250.0019989 Z&#39;);">
                                                     <div id="lgKQMAZriJSAJuue"
                                                         style="transform: scale(1, 1); transform-origin: 250px 250px; animation: auto ease 0s 1 normal none running none;">
-                                                        <img src="./assets/tAlyApSy_4coYW0zENqkBQ==.jpg"
+                                                        <img src="./assets/model-1.jpg"
                                                             alt="Business Portrait of Young Woman " loading="lazy"
                                                             style="transform:translate(0px, 0px) rotate(0deg);transform-origin:250px 375.23452158px;width:500px;height:750.46904315px;display:block;opacity:1.0;object-fit:fill;">
                                                     </div>
@@ -1759,7 +1760,7 @@
                                                     style="clip-path:path(&#39;M500,250.0019989 C500,388.06700134 388.06900024,499.9980011 250,499.9980011 C111.92900085,499.9980011 0,388.06700134 0,250.0019989 C0,111.93000031 111.92900085,0 250,0 C388.07099915,0 500,111.93000031 500,250.0019989 Z&#39;);">
                                                     <div id="a4fUYeZMKW82h0ot"
                                                         style="transform: scale(1, 1); transform-origin: 250px 250px; animation: auto ease 0s 1 normal none running none;">
-                                                        <img src="./assets/tAlyApSy_4coYW0zENqkBQ==(1).jpg"
+                                                        <img src="./assets/model-2.jpg"
                                                             alt="Business Portrait of Young Woman " loading="lazy"
                                                             style="transform:translate(0px, -19.22066101px) rotate(0deg);transform-origin:250px 375.23452158px;width:500px;height:750.46904315px;display:block;opacity:1.0;object-fit:fill;">
                                                     </div>
@@ -1833,7 +1834,7 @@
                                                     style="clip-path:path(&#39;M500,250.0019989 C500,388.06700134 388.06900024,499.9980011 250,499.9980011 C111.92900085,499.9980011 0,388.06700134 0,250.0019989 C0,111.93000031 111.92900085,0 250,0 C388.07099915,0 500,111.93000031 500,250.0019989 Z&#39;);">
                                                     <div id="D4CQTAtlLo6AcjYt"
                                                         style="transform: scale(1, 1); transform-origin: 250px 250px; animation: auto ease 0s 1 normal none running none;">
-                                                        <img src="./assets/7IvjM1gyblKU2RmHK3FnrA==.jpg"
+                                                        <img src="./assets/model-3.jpg"
                                                             alt="Portrait of Young Business Man in Business Suit"
                                                             loading="lazy"
                                                             style="transform:translate(-275.63863748px, -10.60148606px) rotate(0deg);transform-origin:700.64894086px 466.80735685px;width:1401.29788173px;height:933.6147137px;display:block;opacity:1.0;object-fit:fill;">
@@ -1956,7 +1957,7 @@
                               object-fit: cover;
                               object-position: 50% 50%;
                               transform: translate(-50%, -50%) rotate(0deg);
-                            " />
+                            " alt="A man analyzing systems curiously to solve a query or question." />
                                             </div>
                                         </div>
                                     </div>
@@ -2140,9 +2141,9 @@
                                     style="transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
                                     <div id="LO5NPQ8GqHehPwub"
                                         style="width: calc(100% * max(1, var(--scale-fill, 1))); height: calc(100% / min(1, var(--scale-fill, 1))); position: absolute; top: 50%; left: 50%; opacity: 1; animation: auto ease 0s 1 normal none running none;">
-                                        <img src="./assets/ldmnxYoA-K_kV2JDb1nX-A==.svg" alt="Twitter Logo"
+                                        <img src="./assets/twitter.svg" alt="Twitter Logo"
                                             loading="lazy"
-                                            style="width:100%;height:100%;display:block;object-fit:cover;object-position:50% 50%;transform:translate(-50%, -50%) rotate(0deg);">
+                                            style="width:100%;height:100%;display:block;object-fit:cover;object-position:50% 50%;transform:translate(-50%, -50%) rotate(0deg);" alt="twitter link">
                                     </div>
                                 </div>
                             </div>
@@ -2172,9 +2173,9 @@
                                             style="transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
                                             <div id="Mgqxc0bvmTf8z0zT"
                                                 style="width: calc(100% * max(1, var(--scale-fill, 1))); height: calc(100% / min(1, var(--scale-fill, 1))); position: absolute; top: 50%; left: 50%; opacity: 1; animation: auto ease 0s 1 normal none running none;">
-                                                <img src="./assets/p(2).svg"
+                                                <img src="./assets/facebook-icon.svg"
                                                     alt="White Facebook Logo Social Media Icon" loading="lazy"
-                                                    style="width:100%;height:100%;display:block;object-fit:cover;object-position:50% 50%;transform:translate(-50%, -50%) rotate(0deg);">
+                                                    style="width:100%;height:100%;display:block;object-fit:cover;object-position:50% 50%;transform:translate(-50%, -50%) rotate(0deg);" alt="facebook logo">
                                             </div>
                                         </div>
                                     </div>
