--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                 <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#services" title="Services" target="_self">Services</a>
                 </li>
-                <li class="navMenuLink">
+                <!-- <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#products" title="Products" target="_self">Products</a>
-                </li>
+                </li> -->
                 <!-- <li class="navMenuLink"><a class="navMenuLinkContent"
                         href="#testimonials"
                         title="Testimonials" target="_self">Testimonials</a></li> -->
@@ -112,9 +112,9 @@
                 <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#services" title="Services" target="_self">Services</a>
                 </li>
-                <li class="navMenuLink">
+                <!-- <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#products" title="Products" target="_self">Products</a>
-                </li>
+                </li> -->
                 <!-- <li class="navMenuLink"><a class="navMenuLinkContent"
                         href="#testimonials"
                         title="Testimonials" target="_self">Testimonials</a></li> -->
@@ -447,17 +447,17 @@
                     font-family: CanvaSans;
                     line-height: 1.37724308em;
                     text-align: center;
+                    hyphens: none;
                   ">
-                                <span id="hAxzNdHnWC9aaxV7" style="color: #000000">At Quriosoft, we believe in the power
-                                    of collaboration and
-                                    innovation to drive meaningful change. Our philosophy is
-                                    rooted in the idea that by working hand in hand with our
-                                    partners, we can co-create transformative solutions that
-                                    address their unique challenges and propel them towards
-                                    success. We see ourselves not just as service providers, but
-                                    as enablers of progress, committed to empowering our
-                                    partners to achieve their goals and build a better
-                                    future.</span><br />
+                                At Quriosoft, we believe in the power of collaboration and
+                                innovation to drive meaningful change. Our philosophy is
+                                rooted in the idea that by working hand in hand with our
+                                partners, we can co-create transformative solutions that
+                                address their unique challenges and propel them towards
+                                success. We see ourselves not just as service providers, but
+                                as enablers of progress, committed to empowering our
+                                partners to achieve their goals and build a better
+                                future.
                             </p>
                         </div>
                     </div>
@@ -1371,6 +1371,7 @@
                 </div>
             </div>
         </section>
+        <!--
         <a id="products" aria-hidden="true" style="visibility: hidden"></a>
         <section id="InFK6hvbG7tLeReX" style="
           position: relative;
@@ -1600,6 +1601,7 @@
                 </div>
             </div>
         </section>
+        -->
         <!--
         <a id="testimonials" aria-hidden="true" style="visibility:hidden;"></a>
         <section id="ZDuaawVnCHGtQirf"
