toggle products section

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                 <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#services" title="Services" target="_self">Services</a>
                 </li>
-                <!-- <li class="navMenuLink">
+                <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#products" title="Products" target="_self">Products</a>
-                </li> -->
+                </li>
                 <!-- <li class="navMenuLink"><a class="navMenuLinkContent"
                         href="#testimonials"
                         title="Testimonials" target="_self">Testimonials</a></li> -->
@@ -112,9 +112,9 @@
                 <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#services" title="Services" target="_self">Services</a>
                 </li>
-                <!-- <li class="navMenuLink">
+                <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#products" title="Products" target="_self">Products</a>
-                </li> -->
+                </li>
                 <!-- <li class="navMenuLink"><a class="navMenuLinkContent"
                         href="#testimonials"
                         title="Testimonials" target="_self">Testimonials</a></li> -->
@@ -1371,7 +1371,6 @@
                 </div>
             </div>
         </section>
-        <!--
         <a id="products" aria-hidden="true" style="visibility: hidden"></a>
         <section id="InFK6hvbG7tLeReX" style="
           position: relative;
@@ -1601,7 +1600,6 @@
                 </div>
             </div>
         </section>
-        -->
         <!--
         <a id="testimonials" aria-hidden="true" style="visibility:hidden;"></a>
         <section id="ZDuaawVnCHGtQirf"
