--- a/index.html
+++ b/index.html
@@ -2788,7 +2788,7 @@
                     text-transform: uppercase;
                     letter-spacing: 0em;
                   ">
-                                <span id="bs1YRvf3JaTCLrci" style="color: #38b6ff; font-weight: 700">Phone</span><br />
+                                <span id="bs1YRvf3JaTCLrci" style="color: #38b6ff; font-weight: 700">Email</span><br />
                             </p>
                         </div>
                     </div>
@@ -2819,13 +2819,14 @@
                     text-transform: none;
                     letter-spacing: 0em;
                   ">
-                                <a href="tel:+14257807141" style="color: #ffffff; /* #1a2529; */ font-weight: 700">
-                                    <span>+1</span> (425) <span>780</span>-<span>7141</span>
+                                <a href="mailto:contact@quriosoft.com" style="color: #ffffff; /* #1a2529; */ font-weight: 700">
+                                    <span>contact</span>@<span>quriosoft</span>.<span>com</span>
                                 </a>
                             </p>
                         </div>
                     </div>
                 </div>
+                <!--
                 <div id="A0IQjklGCvKXi4d3" style="z-index: 9">
                     <div id="QsYpFMssyccrNSig" style="
                 box-sizing: border-box;
@@ -2849,7 +2850,7 @@
                     text-transform: uppercase;
                     letter-spacing: 0em;
                   ">
-                                <span id="sXhxzirDjB1TGhDW" style="color: #38b6ff; font-weight: 700">Email</span><br />
+                                <span id="sXhxzirDjB1TGhDW" style="color: #38b6ff; font-weight: 700">Phone</span><br />
                             </p>
                         </div>
                     </div>
@@ -2880,14 +2881,14 @@
                     text-transform: none;
                     letter-spacing: 0em;
                   ">
-                                <a href="mailto:contact@quriosoft.com"
-                                    style="color: #ffffff; /* #1a2529; */ font-weight: 700">
-                                    <span>contact</span>@<span>quriosoft</span>.<span>com</span>
+                                <a href="tel:+14257807141" style="color: #ffffff; /* #1a2529; */ font-weight: 700">
+                                    <span>+1</span> (425) <span>780</span>-<span>7141</span>
                                 </a>
                             </p>
                         </div>
                     </div>
                 </div>
+                -->
                 <!--
                 <div id="cLHFH7Qh2r1h9lwa" style="z-index:10;">
                     <div id="SqUfxUeLj72JZs1Z"
@@ -2954,6 +2955,9 @@
                 -->
             </div>
         </section>
+        <section style="background-color: #1a2529; padding: 3rem; font-family: Nunito; line-height: 0.99107099em;">
+            <p style="color: #ffffff; /* #1a2529; */ font-weight: 700; padding: 10px; border-top: 2px solid #ffffff; font-size: 1rem">Copyright &COPY; 2024 QurioSoft LLC. All rights reserved.</p>
+        </section>
     </div>
     <div id="overlay" style="width: 100vw; height: 100vh; position: fixed; top:0; left: 0; display: none; background-color: #ffffff; opacity: 50%;"></div>
     <script>
@@ -2982,16 +2986,10 @@
             const vm = document.getElementById("verticalMenu");
             const mbi = document.querySelector('#menuButtonIcon');
             mbi.addEventListener('click', showVerticalMenu);
-            // mbi.addEventListener('focus', showVerticalMenu);
-
             overlay.addEventListener('click', hideVerticalMenu);
-            // vm.addEventListener('blur', hideVerticalMenu);
-            // vm.addEventListener('focusout', hideVerticalMenu);
-
-            // onClickOutside('#verticalMenu', '#menuButtonIcon', hideVerticalMenu);
         })();
     </script>
-    <!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SMJFGFZ18B"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
