fix form for mobile view & hide products

--- a/index.html
+++ b/index.html
@@ -92,12 +92,16 @@
                 <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#services" title="Services" target="_self">Services</a>
                 </li>
+                <!--
                 <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#products" title="Products" target="_self">Products</a>
                 </li>
-                <!-- <li class="navMenuLink"><a class="navMenuLinkContent"
-                        href="#testimonials"
-                        title="Testimonials" target="_self">Testimonials</a></li> -->
+                -->
+                <!-- 
+                <li class="navMenuLink">
+                    <a class="navMenuLinkContent" href="#testimonials" title="Testimonials" target="_self">Testimonials</a>
+                </li> 
+                -->
                 <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#contact" title="Contact" target="_self">Contact</a>
                 </li>
@@ -112,12 +116,16 @@
                 <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#services" title="Services" target="_self">Services</a>
                 </li>
+                <!--
                 <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#products" title="Products" target="_self">Products</a>
                 </li>
-                <!-- <li class="navMenuLink"><a class="navMenuLinkContent"
-                        href="#testimonials"
-                        title="Testimonials" target="_self">Testimonials</a></li> -->
+                -->
+                <!-- 
+                <li class="navMenuLink">
+                    <a class="navMenuLinkContent" href="#testimonials" title="Testimonials" target="_self">Testimonials</a>
+                </li>
+                -->
                 <li class="navMenuLink">
                     <a class="navMenuLinkContent" href="#contact" title="Contact" target="_self">Contact</a>
                 </li>
@@ -2090,6 +2098,7 @@
                 </div>
             </div>
         </section>
+        <!--
         <a id="products" aria-hidden="true" style="visibility: hidden"></a>
         <section id="InFK6hvbG7tLeReX" style="
           position: relative;
@@ -2319,9 +2328,10 @@
                 </div>
             </div>
         </section>
+        -->
         <a id="contact" aria-hidden="true" style="visibility: hidden"></a>
         <section id="fDMM0IRH1Pe37Lr0"
-            style="position:relative;overflow:hidden;display:grid;align-items:center;grid-template-columns:auto 100rem auto;z-index:0;margin-top:-1px; padding-bottom: 100px; background-color: #1a2529;">
+            style="position:relative;overflow:hidden;display:grid;align-items:center;grid-template-columns:auto 100rem auto;z-index:0;margin-top:-1px; padding-bottom: 100px; color: #1a2529;">
             <div id="qBESmrGsWrd5FNFE"
                 style="grid-area:1 / 1 / 2 / 4;display:grid;position:absolute;min-height:100%;min-width:100%;">
                 <div id="h4bdCu3aCjribucP" style="z-index:0;">
@@ -2329,7 +2339,7 @@
                         style="box-sizing:border-box;width:100%;height:100%;transform:rotate(0deg);">
                         <div id="WTkmjg5BlrbRagvX" style="width:100%;height:100%;opacity:1.0;">
                             <div id="VrPCmML4TDlTAhyz"
-                                style="background-color:#1a2529;opacity:1.0;transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
+                                style="color:#1a2529;opacity:1.0;transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
                             </div>
                         </div>
                     </div>
@@ -2366,7 +2376,7 @@
                                     style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                     <p id="CCm584e2XFTgupxV"
                                         style="color:#ffffff;font-family:Nunito;line-height:1em;letter-spacing:0em;">
-                                        <span id="YJWXqVULBoagSlj4" style="color:#ffffff;font-weight:700;">Contact
+                                        <span id="YJWXqVULBoagSlj4" style="color:#1a2529;font-weight:700;">Contact
                                             Us</span><br></p>
                                 </div>
                             </div>
@@ -2390,7 +2400,7 @@
                         <div id="TY4c0PkepUYWy39c"
                             style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                             <p id="Y3dm2L0tbHvIgW9C" style="color:#ffffff;direction:ltr;font-family:Nunito;margin-left:0em;line-height:1.45312727em;text-transform:none;letter-spacing:0em;">
-                                <a id="ae1pytzqT4tgI4wO" href="mailto:contact@quriosoft.com" style="color: #ffffff; /* #1a2529; */ font-weight: 700">
+                                <a id="ae1pytzqT4tgI4wO" href="mailto:contact@quriosoft.com" style="color: #1a2529; font-weight: 700">
                                     <span>contact</span>@<span>quriosoft</span>.<span>com</span>
                                 </a>
                             </p>
@@ -2480,6 +2490,7 @@
                                     min-height: 1px;
                                 }
                                 .zcwf_lblLeft .zcwf_col_lab label {
+                                    color: #1a2529;
                                     font-weight: 700;
                                 }
                                 .zcwf_lblLeft .zcwf_col_fld {
@@ -2584,12 +2595,14 @@
                                     display: block;
                                     clear: both;
                                 }
-                                @media all and (max-width: 600px) {
-                                    .zcwf_lblLeft .zcwf_col_lab, .zcwf_lblLeft .zcwf_col_fld {
-                                        width: auto;
-                                        float: none !important;
-                                    }
+                                @media all and (max-width: 500px) {
                                     .zcwf_lblLeft .zcwf_col_help {width: 40%;}
+                                    .ctc-form-field {
+                                        font-size: 4rem;
+                                    }
+                                    .zcwf_button.pill {
+                                        font-size: 3rem;
+                                    }
                                 }
                                 </style>
                                 <div class='zcwf_row'>
