--- a/index.html
+++ b/index.html
@@ -1609,7 +1609,7 @@
                                             style="transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
                                             <div id="tVm79pKtEpJ4dfjB"
                                                 style="width: calc(100% * max(1, var(--scale-fill, 1))); height: calc(100% / min(1, var(--scale-fill, 1))); position: absolute; top: 50%; left: 50%; opacity: 1; animation: auto ease 0s 1 normal none running none;">
-                                                <img src="./assets/app-dev-online-payment.svg"
+                                                <img src="./assets/ai-ml.svg"
                                                     alt="Online Payment, Mobile Payment, Payment Method, Commerce And Shopping, Mobile Icon"
                                                     loading="lazy"
                                                     style="width:100%;height:100%;display:block;object-fit:cover;object-position:50% 50%;transform:translate(-50%, -50%) rotate(0deg);">
@@ -1626,8 +1626,8 @@
                                     style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                     <p id="HAXOAWE3hEQlhNjb"
                                         style="color:#38b6ff;direction:ltr;font-family:Nunito;margin-left:0em;line-height:0.97058253em;text-align:center;text-transform:uppercase;letter-spacing:0em;">
-                                        <span id="O8MYf1MmjIN32g4m" style="color:#38b6ff;font-weight:700;">Mobile App
-                                            Development</span><br></p>
+                                        <span id="O8MYf1MmjIN32g4m" style="color:#38b6ff;font-weight:700;">AI / ML / GenAI</span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -1638,10 +1638,10 @@
                                     style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                     <p id="puIGqyXFa8nZEwcB"
                                         style="color:#ffffff;direction:ltr;font-family:Nunito;line-height:1.45821407em;text-align:center;text-transform:none;letter-spacing:0em;">
-                                        <span id="iYHC7Lo5muFqEZqU" style="color:#ffffff;">We design and develop custom
-                                            mobile applications for iOS, Android, and other platforms to meet partner’s
-                                            specific needs and enhance their digital presence. We cover both native and
-                                            cross-platform app development.</span><br></p>
+                                        <span id="iYHC7Lo5muFqEZqU" style="color:#ffffff;">
+                                            We design and develop custom artificial intelligence, machine learning, personalization and generational AI solutions to meet partner’s specific needs. We integrate AWS Bedrock, AWS Sagemaker, OpenAI with the correct ML or LLM models.
+                                        </span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -1680,25 +1680,13 @@
                                                     style="transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
                                                     <div id="r8UIBMkvHW0zj9pk"
                                                         style="width: calc(100% * max(1, var(--scale-fill, 1))); height: calc(100% / min(1, var(--scale-fill, 1))); position: absolute; top: 50%; left: 50%; opacity: 1; animation: auto ease 0s 1 normal none running none;">
-                                                        <img src="./assets/erp-software-solutions.svg"
+                                                        <img src="./assets/app-dev-online-payment.svg"
                                                             alt="Programming, Coding Icon. Blue Color Vector Symbol."
                                                             loading="lazy"
                                                             style="width:100%;height:100%;display:block;object-fit:cover;object-position:50% 50%;transform:translate(-50%, -50%) rotate(0deg);">
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div id="tGh1bLujnVmEJVnX" style="z-index:44;">
-                                    <div id="teUw2xThkmEff76F"
-                                        style="box-sizing:border-box;width:100%;height:100%;transform:rotate(0deg);">
-                                        <div id="WTePzqKnqq497emE"
-                                            style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
-                                            <p id="Qyr5tppCxFohgTMO"
-                                                style="color:#ffffff;font-family:Nunito;line-height:1.48314598em;text-align:center;text-transform:none;letter-spacing:0em;">
-                                                <span id="Gm9WC7e1F9sgfTTb"
-                                                    style="color:#ffffff;font-weight:700;">ERP</span><br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -1711,8 +1699,10 @@
                                     style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                     <p id="jAUhkA3sU1Hi7jNJ"
                                         style="color:#38b6ff;direction:ltr;font-family:Nunito;margin-left:0em;line-height:0.97058253em;text-align:center;text-transform:uppercase;letter-spacing:0em;">
-                                        <span id="irevD7tX2uWLlChL" style="color:#38b6ff;font-weight:700;">Enterprise
-                                            Software</span><br></p>
+                                        <span id="irevD7tX2uWLlChL" style="color:#38b6ff;font-weight:700;">
+                                            Mobile App Development
+                                        </span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -1723,10 +1713,10 @@
                                     style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                     <p id="o8wdEQNTLhu0QEZG"
                                         style="color:#ffffff;font-family:Nunito;line-height:1.45821407em;text-align:center;">
-                                        <span id="DlKbcLKRYl7Il3hv" style="color:#ffffff;">We build robust
-                                            enterprise-level software applications for businesses of all sizes. We
-                                            integrate with existing enterprise systems such as CRM, ERP, and HRM for
-                                            seamless workflow management. </span><br></p>
+                                        <span id="DlKbcLKRYl7Il3hv" style="color:#ffffff;">
+                                            We design and develop custom mobile applications for iOS, Android, and other platforms to meet partner’s specific needs and enhance their digital presence. We cover both native and cross-platform app development.
+                                        </span>
+                                    </p>
                                     <p id="VGcPQ8GoOMzhohRg"
                                         style="color:#ffffff;direction:ltr;font-family:Nunito;line-height:1.45821407em;text-align:center;text-transform:none;letter-spacing:0em;white-space:pre;">
                                         <br></p>
