fix genai service message

--- a/index.html
+++ b/index.html
@@ -1626,7 +1626,7 @@
                                     style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                     <p id="HAXOAWE3hEQlhNjb"
                                         style="color:#38b6ff;direction:ltr;font-family:Nunito;margin-left:0em;line-height:0.97058253em;text-align:center;text-transform:uppercase;letter-spacing:0em;">
-                                        <span id="O8MYf1MmjIN32g4m" style="color:#38b6ff;font-weight:700;">AI / ML / GenAI</span>
+                                        <span id="O8MYf1MmjIN32g4m" style="color:#38b6ff;font-weight:700;">Artificial Intelligence</span>
                                     </p>
                                 </div>
                             </div>
@@ -1638,8 +1638,8 @@
                                     style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                     <p id="puIGqyXFa8nZEwcB"
                                         style="color:#ffffff;direction:ltr;font-family:Nunito;line-height:1.45821407em;text-align:center;text-transform:none;letter-spacing:0em;">
-                                        <span id="iYHC7Lo5muFqEZqU" style="color:#ffffff;">
-                                            We design and develop custom artificial intelligence, machine learning, personalization and generational AI solutions to meet partner’s specific needs. We integrate AWS Bedrock, AWS Sagemaker, OpenAI with the correct ML or LLM models.
+                                        <span id="iYHC7Lo5muFqEZqU" style="color:#ffffff;">We design and develop custom artificial intelligence (AI), machine learning (ML), 
+                                            personalization (P13N) and generative AI (GenAI) solutions to meet partner’s specific needs. 
                                         </span>
                                     </p>
                                 </div>
